<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ui.fragments.SpaceDetailFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--<TextView-->
    <!--android:id="@+id/text_detail"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Detail text" />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_label"
                android:id="@+id/reservationDetailTextView"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36dp"
                android:layout_marginBottom="12dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Address:"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="1"
                android:textAlignment="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorMainFont"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spacedetail_address"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorMainFont"
                android:background="@color/colorAccent"/>

            <fragment
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                class="com.google.android.gms.maps.SupportMapFragment"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Start time:"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_time_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="End time:"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/end_time_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Renter:"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/renter_username_label"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/confirm_label"
                android:textColor="@color/colorMainFont"
                android:background="@color/colorSubAccent"
                android:padding="12dp" />

            <Button
                android:id="@+id/btn_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/review_label"
                android:textColor="@color/colorMainFont"
                android:padding="12dp" />

            <Button
                android:id="@+id/btn_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/report_label"
                android:textColor="@color/colorMainFont"
                android:padding="12dp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:text="@string/cancel_label"
                android:textColor="@color/colorMainFont"
                android:padding="12dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
</FrameLayout>
