<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ReservationsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res_label"
            android:id="@+id/reservationsTextView"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming_res_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="6dp"/>

                <ListView
                    android:id="@+id/futureList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/past_res_label"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_margin="6dp"/>

                <ListView
                    android:id="@+id/passedList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorMainFont"
                    android:background="@color/colorGrey"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
